@@ -15,6 +15,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  * #11213: The username input doesn't have focus when the page loads
  * #11312: Variable `user' does not exist (in api.py)
  * #12058: Bad email default regexp
+ * #12067: Impossible to delete email
  * fix access to account properties clean-up from user admin panel
  * always show associated email in user details admin panel
  * fix and unify web-UI feedback on user and admin actions
